retrieveUnpackaged/objects/Project_Location__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street_Address_1__c  &amp; &quot;, &quot; &amp;  Street_Address_2__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PSL_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PSL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_End_Date__c</fullName>
        <label>Location End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Start_Date__c</fullName>
        <label>Location Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Housing__c</fullName>
        <label>Member Housing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_EIN__c</fullName>
        <formula>Project_Lookup__r.Organization__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lookup</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Associates__c</fullName>
        <label>Summer Associates</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <label>Supervisor Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone_Number__c</fullName>
        <label>Supervisor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Undisclosed_Location__c</fullName>
        <inlineHelpText>If marked as &apos;Yes&apos;, User cannot enter Street Address 1 and Street Address 2. If marked as &apos;No&apos;, User is required to enter address.</inlineHelpText>
        <label>Undisclosed Location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>sequence</label>
        <type>AutoNumber</type>
    </fields>
    <label>Project Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Project Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Later_than_Location_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Location_End_Date__c  &lt;  Location_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Location_End_Date__c</errorDisplayField>
        <errorMessage>Location End Date should be later than Location Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_Address</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( Undisclosed_Location__c , &apos;Yes&apos;), 
(OR((NOT(ISBLANK( Street_Address_1__c ))),NOT(ISBLANK( Street_Address_2__c)))),(OR((ISBLANK( Street_Address_1__c )),
(ISBLANK( Street_Address_2__c )))))</errorConditionFormula>
        <errorDisplayField>Street_Address_1__c</errorDisplayField>
        <errorMessage>If Undisclosed Location is marked as Yes, system shall not allow user to enter Street Address 1 and Street Address 2. If marked as no, user is required to enter address.</errorMessage>
    </validationRules>
</CustomObject>